<resources>
    <string name="app_name">Toodledo Widget</string>
    <string name="widget_name">Tasks</string>
    <string name="settings_title">Toodledo Widget Settings</string>
    <string name="not_logged_in">Tap to log in to Toodledo</string>
    <string name="no_tasks">No tasks due</string>
    <string name="error_offline">↻ Offline – tap to retry</string>
    <string name="error_api">↻ Error loading tasks – tap to retry</string>
    <string name="error_auth">Login expired – tap to log in</string>
    <string name="section_overdue">Overdue</string>
    <string name="section_today">Today</string>
    <string name="section_tomorrow">Tomorrow</string>
    <string name="section_this_week">This week</string>
    <string name="section_next_week">Next week</string>
    <string name="section_later">Later</string>
    <string name="pref_transparency">Transparency</string>
    <string name="pref_font_size">Font size</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="refresh">↻ Refresh</string>
    <string name="login_hint">Log in to your Toodledo account to display your tasks.</string>
    <string name="logout_hint">You are logged in. Your tasks are shown on the widget.</string>
    <string name="close">Done</string>
    <string name="add_task">Add task</string>
    <string name="donate_hint">If you like this widget, the next coffee ☕ is thanks to you:\n\npaypal.me/JanKurella</string>
    <string name="feedback_hint">Found a bug? Have an idea? Let me know!</string>
</resources>
